# agent-devops

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  logging_config.py  main.py  memory.py  observability.py  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  sessions.py  ui.py
scripts/: smoke_test_gcp.py
tests/: conftest.py  test_common.py  test_gcp_cloudrun.py  test_gcp_compute.py  test_gcp_iam.py  test_gcp_network.py  test_gcp_storage.py  test_sessions.py
tools/: _common.py  aws.py  gcp.py  gcp_cloudrun.py  gcp_compute.py  gcp_iam.py  gcp_network.py  gcp_storage.py
